--- a/unknowns.tex
+++ b/unknowns.tex
@@ -8,75 +8,167 @@
 
 
 
-I'd like to spend a couple of days talking about ways the picture in this class can be extended, finally, some actually unanswered questions that naturally arise.  The following two section titles are totally made up and probably won't last.
+
+
+\section{The road thus far}
+
+\begin{center}
+\Huge Mike is writing this.
+\end{center}
 
 
 
 
+
+
+\section{The road ahead}\label{OpenQuestionsSection}
+
+
+
+In this section, we discuss various topics (sometimes very sketchily, sometimes in more detail) which are currently poorly understood but which also are now coming over the horizon.  A number of these will likely be resolved by the time a second printing of this book were to come around.
+
+
+
+
+
+
+
+\subsection*{Splitting bordism spectra}
+
+Hovey's paper on $v_n$--periodic elements in ring spectra.  He has a nice (and thorough!) exposition on why one should be interested in bordism spectra and their splittings: for instance, a careful analysis of $M\Spin$ will inexorably lead one toward studying $KO$.  It would be nice if studying $M\String$ (and potentially higher analogues) would lead one toward non-completed, non-connective versions of $EO_n$.  Talk about $BoP$, for instance.
+
+
+
+
+
+\subsection*{Blueshift and redshift}
+
+Blueshift, A--M--S, and the relationship to A--F--G?
+
+$p$--divisible groups and transchromatic phenomena.  The ultrachromatic program and the introduction of equicharacteristic homotopy theory.
+
+At the top of page 10 Neil talks in FPFP very briefly about Greenlees--May and local homology.
+
+
+
+
+
+\subsection*{Why formal groups?}
 
 
 \begin{remark}
+It is completely unclear why $MU$ plays such an important mediating role between geometry (i.e., the stable category) and algebra (i.e., sheaves on the moduli of formal groups).  Given a general ring spectrum $R$ and thick prime $\otimes$--ideals $\CatOf C_\alpha$ of perfect $R$--modules, one ask the analogous two questions:
+\begin{enumerate}
+\item Is it possible to find an $R$--algebra $S$ whose context functor induces a homeomorphism of Balmer spectra $\Spec(\CatOf{Modules}_R^{\perf}) \to \Spec(\CatOf{QCoh}(\context{S/R}))$?
+\item Are there complementary localizers $L_\alpha\co \CatOf{Modules}_R \to \CatOf{Modules}_{R,(\alpha)}$?  Can they be presented via Bousfield's framework as homological localizations for auxiliary $S$--algebra spectra $S_\alpha$?  Do the contexts $\context{S_\alpha}$ admit compatible localizers with $\context{S}$?
+\end{enumerate}
+For $R = \S$, this is the role that the $R$--algebra $S = MU$ and the $S$--algebras $S_d = E(d)$ play.  Finding these spectra feels like striking gold, and it is unclear how to produce analogous spectra in general.
+
+Mathews's work on Galois descent shows that the fixed point map $\CatOf{Modules}_{E_\Gamma, \Aut \Gamma}^{\mathrm{complete}} \to \CatOf{Spectra}_{\Gamma}$ is an equivalence of categories.
+\end{remark}
+\noindent One can ask the same question from the geometric direction: why bordism?  Why should these spectra have these nice flatness properties?  Why should they have recognizable computational properties?  Why bordism?
+
+
+
+
+DISCUSSION OF ``SPECTRAL FORMAL GROUPS'' AND LOCAL CFT
+
 With contexts in mind, the pro-spectrum $DX_+ = \{F(X_\alpha, \S)\}_\alpha$ gains our attention as a kind of universal example.  Because each $X_\alpha$ is a compact object, base-change along the unit map $\eta\co \S \to E$ can be computed by the following formula:
 \begin{align*}
 \eta^* DX_+ = E \sm \{F(X_\alpha, \S)\}_\alpha = \{E \sm F(X_\alpha, \S)\}_\alpha = \{F(X_\alpha, E)\}_\alpha.
 \end{align*}
 Applying the functor $\Spf \circ \pi_0$ to this pro-system yields the formal scheme $X_E$ considered in \Cref{FullDefnOfXE}.  One of the themes of this book will be to think of the objects $X$ and $DX_+$ as spectral incarnations of some formal group construction, which base-change along $\eta$ to specialize to classical algebro-geometric constructions applied to the formal group associated to $E$.
-\end{remark}
 
 
 
-Coordinate-free presentation of \Cref{DeformationComplex}
 
 
 
+\subsection*{Asymptotics in homotopy theory}
+
+Nilpotency and vanishing curves in the ($MU$--)Adams spectral sequence.  The \emph{non}-nilpotency of $\eta$ in the $MU$--Adams spectral sequence.  Mathew--Meier type theorems about horizontal vanishing lines and the Tate construction (and related results about the $\TMF$ spectral sequence and the Johnson--Wilson theories).
+
+The superior algebraic geometry of the derived moduli of elliptic curvs.
+
+
+
+
+\subsection*{Local computations}
+
+Difficulty in computing $\S_d \actson E_d^*$. (Gross--Hopkins and the period map.)
+
+Agnes and everyone else on the chromatic splitting conjecture.
+
+Hopkins's analytic Weierstrass products in the Bockstein spectral sequence: \[v_2^{(n)} = v_2^{p^n} \prod_{j=0}^{n-2} \left(1 - \left( \frac{v_1^{p+1}}{v_2} \right)^{p^{n-1} - p^j} \right) \pmod{v_1^{p^n + p^{n-1}}}.\]  In general, Mike has formulas like these for the $0$--line and for the elements $v_{n+1} h_n$ on the $1$--line.
+
+The homotopy of $\widehat L_2 \S$ is also known, by work of Shimomura and collaborators~\cite{Shimomura,ShimomuraYabeM20,ShimomuraYabeL2S} (but see also the reorganization by Behrens~\cite{BehrensRevisited}).  It is \emph{exceedingly} complicated, and it is an open problem to find an expression of it which admits human digestion.  Behrens has pursued a program encoding this problem in terms of modular forms~\cite{BehrensCongruences,BehrensModularDescription,BehrensBuildings}, and Hopkins has proposed a program involving $L$--functions~\cite{StricklandpAdicInterpolation}, motivated by which Hovey and Strickland have shown a kind of continuity result for among the groups~\cite[Section 14]{HoveyStrickland}.
 
 \begin{remark}
-The presence of such interesting arithmetic invariants (Bernoulli numbers, Bernoulli polynomials, generalized Eisenstein series, \ldots) hiding in the Miller invariant and its analogues is very striking.  One wonders what the analogous values are (or perhaps the values stemming from the iterated $S^1$--transfer of Baker et al~\cite{BCGHRW}) associated to a Morava $E_\Gamma$.
+There are also ``finitary'' flavors of chromatic localization available, which are typically less robust but more computable.  They assemble into a diagram:
+\begin{center}
+\begin{tikzcd}
+E \arrow{r} \arrow{d} & L_d^{\fin} E \arrow{r} \arrow{d} & L_d E \arrow{d} \\
+L_{X(d)} E \arrow{r} & \widehat L_d^{\fin} E \arrow{r} & \widehat L_d E,
+\end{tikzcd}
+\end{center}
+where $X(d)$ is a finite complex of type exactly $d$, $v$ is a $v_d$--self-map of $X(d)$, $T(d) = X(d)[v^{-1}]$ is the localizing telescope, $\widehat L_d^{\fin}$ is Bousfield localization with respect to $T(d)$ (which can be shown to be independent of choice of $X(d)$ and of $v$), and $L_d^{\fin}$ denotes localization with respect to the class of \emph{finite} $E(d)$--acyclics.  Much is known about these functors: for instance, $L_{X(d)} L_d = \widehat L_d$, there is a chromatic fracture square relating $L_d^{\fin}$ to $\widehat L_{\le d}^{\fin}$, and $L_d^{\fin} E \simeq L_d E$ if and only if $\widehat L_{\le d}^{\fin} E \simeq \widehat L_{\le d} E$.  One major question about these functors remains open, corresponding the last unsettled nilpotence and periodicity conjecture of Ravenel~\cite[Conjecture 10.5]{RavenelLocalizationWRTPeriodic}: is the map $\widehat L_d^{\fin} E \to \widehat L_d E$ an equivalence?  Multiple proofs and disproofs have been offered, but the literature remains unsettled.
+\citeme{Find some proofs and disproofs.}
 \end{remark}
 
 \begin{remark}
-Some more open questions about this which emphasize the connection to number theory can be found at the end of one of Hopkins's Talbot talks~\cite{HopkinsTheStringOrientation}.
+Writing $M_d$ for the fiber in the sequence $M_d \to L_d \to L_{d-1}$, the filtration spectral sequence associated to the tower in \Cref{ChromaticConvergence} is called the \textit{geometric chromatic spectral sequence}, which has the form $\pi_* M_* \S \Rightarrow \pi_* \S_{(p)}$.  The two forms of filtration data $M_d X$ and $\widehat L_d X$ are actually functorially equivalent to one another:
+\begin{align*}
+\widehat L_d M_d & \simeq \widehat L_d, &
+M_d \widehat L_d & \simeq M_d,
+\end{align*}
+but they have fairly distinct properties.  For instance, $M_d$ is smashing whereas $\widehat L_d$ is not, $M_d$ is not part of an adjoint pair whereas $\widehat L_d$ is, and the analogue of \Cref{FormulaForKnLocalization} for $M_d$ is ``backwards'':\citeme{I forget who this is due to} \[M_d X \simeq \colim_I \left( M^0(v^I) \sm L_d X \right).\]  The spectrum $M_d X$ also relates to the chromatic fracture square for $X$:
+\begin{center}
+\begin{tikzcd}
+M_d X \arrow{d} \arrow[equal]{r} & M_d X \arrow{d} \\
+L_d X \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \widehat L_d X \arrow{d} \\
+L_{d-1} X \arrow{r} & L_{d-1} \widehat L_d X.
+\end{tikzcd}
+\end{center}
+From this, we see that there is a fiber sequence $M_d X \to \widehat L_d X \to L_{d-1} \widehat L_d X$.
+
+The case $d = 1$ gives the prototypical example of the difference between these two presentations of the ``exact height $d$ data'', where the sequence becomes: \[\colim_j (M^0(p^j) \sm L_1 X) \to \lim_j (M_0(p^j) \sm L_1 X) \to \left( \lim_j (M_0(p^j) \sm L_1 X) \right)_{\Q}.\]  If, for instance, $\pi_0 L_1 X = \Z_{(p)}$, then the long exact sequence of homotopy groups associated to this fiber sequence gives
+\begin{center}
+\begin{tikzcd}
+\pi_0 \widehat L_1 X \arrow{r} \arrow[equal]{d} & \pi_0 L_0 \widehat L_1 X \arrow{r} \arrow[equal]{d} & \pi_{-1} M_1 X \arrow[equal]{d} \\
+\Z^\wedge_p \arrow{r} & \Q_p \arrow{r} & \Z/p^\infty.
+\end{tikzcd}
+\end{center}
+Coupling this to \Cref{piLK1SExample}, we compute
+\begin{align*}
+\pi_t M_1 \S^0 & = \begin{cases} \Z/p^\infty & \text{when $t = -1$}, \\ \Z_p / (pk) & \text{when $t = k|v_1| - 1$ and $t = \ne 0$}, \\ \Z/p^\infty & \text{when $t = (0 \cdot |v_1| - 1) - 1 = -2$}, \\ 0 & \text{otherwise}. \end{cases}
+\end{align*}
+This is a model for what happens generally when passing from $\pi_* \widehat L_d X$ to $\pi_* M_d X$: the $v_j$--torsion--free groups get converted to infinitely $v_j$--divisible groups, with some dimension shifts.\footnote{A height $2$ example of this same phenomenon is visible in Behrens's paper~\cite[Section 7]{BehrensRevisited}.}
 \end{remark}
 
-\begin{remark}
-These Bernoulli sequences are \emph{not} the only sequences satisfying these reconstruction properties---in fact, there are infinitely many, and an explicit presentation of them is available~\cite{SprangNaumann}.  Sprang leaves open whether there is a way to single out the Bernoulli solution among the rest, and it seems plausible that this is the only solution with a ``reasonable'' growth rate (as measured in $\R$).  It would also be great if this ``real place'' condition had something to do with a smooth cohomology theory like differential real $K$--theory.
+
+
+\subsection*{$p$--adic Interpolation}
+
+Hopkins's program for $p$--adic interpolation and Salchian $L$--functions.  Description of the Lubin--Tate tower and the local Langlands correspondence
+
+\begin{remark}[Yanovski--Schlank]
+Set $S_{\mathrm{small}}$ to be the category generated under finite colimits (including actions by finite groups, say) by $\pi$--finite spaces.  A \textit{generalized homotopy cardinality function} is a function $\chi\co \CatOf S_{\mathrm{small}} \to \Q$ satisfying
+\begin{enumerate}
+    \item Homotopy invariance: if $A \simeq B$, then $\chi(A) = \chi(B)$.
+    \item Normalization: $\chi(*) = 1$.
+    \item Additivity: $\chi(A \cup_C B) = \chi(A) + \chi(B) - \chi(C)$.
+    \item Multiplicativity: $\chi(A \times B) = \chi(A) \cdot \chi(B)$.
+\end{enumerate}
+For example, $\chi_{n,p}(X) = \dim K^0(X) - \dim K^1(X)$.  In the case $n = 0$ or $n = \infty$, this recovers the Euler characteristic, and in the intermediate cases we have computations like $\chi_{n,p}(\OS{H\Z/p}{m}) = p^{\binom{n}{m}}$.  One can show that the function $n \mapsto \chi_{n, p}(X)$ extends uniquely to a dyadic analytic function $\widehat L_{X,p}\co \Z^\wedge_2 \to \Z^\wedge_2$.
+
+We also have the Baez--Dolan function \[|X| = \sum_{x_0 \in \pi_0 X} \prod_{n=1}^\infty |\pi_n (X, x_0)|^{(-1)^n} \in \Q_{\ge 0},\] and you can convince yourself of things like $|B\Z/p| = 1/p$ and $|M_g| = 2 - 2g$.  This is not a global homotopy cardinality function, since $BC_p \sm BC_q = *$.  However, restricted to $p$--local objects in $\CatOf S_{small}$, it appears as $\widehat L_{X,p}(-1)$.  For instance, this recovers \[\widehat L_{\OS{H\Z/p}{m}, p}(-1) = p^{\binom{-1}{m}} = p^{(-1)^m} = |\OS{H\Z/p}{m}|.\]
 \end{remark}
 
 
 
 
 
-\subsection*{Higher orientations}
-
-$\TAF$ and friends\label{TAFDiscussion}
-
-The $\alpha_{1/1}$ argument: Prop 2.3.2 of Hovey's $v_n$--elements of ring spectra
-
-% The HLP calculations
-
-\subsection*{Equivariance}
-
-This is tied up with the theory of power operations in a way I've never really thought about.  Seems complicated.
-
-You should also mention the ``rigidity'' of the elliptic genus, which is about an $S^1$--equivariant version.
-
-\subsection*{Index theorems}
-
-Connections with analysis
-
-The Stolz--Teichner program
-
-
-
-
-
-
-\section{Open questions}\label{OpenQuestionsSection}
-
-In this section, we discuss various topics (sometimes very sketchily, sometimes in more detail) which are currently poorly understood but which also are now coming over the horizon.  A number of these will likely be resolved by the time a second printing of this book were to come around.
-
-
-\subsection*{Geometry of Dieudonn\'e theories}
+\subsection*{Interaction with Dieudonn\'e theory}
 
 In \Cref{SectionDieudonneModules}, we gave a pair of definitions of a Dieudonn\'e module, one contravariant and one covariant, and in \Cref{DieudonneDualityThm} we announced that the resulting modules were linearly dual to one another.  This is a remarkably difficult theorem to prove, it is hard to find an accessible proof in the literature,\footnote{In fact, Grothendieck introduced the de Rham--Dieudonn\'e functor and crystalline Dieudonn\'e theory in the same landmark paper, but elected not to provide a proof of an equivalence of his methods with past ones.} and a \emph{geometric} proof appears not to exist.
 
@@ -121,16 +213,7 @@ Second, we must produce an analogue of logarithmic differentiation, which is res
     The bottom logarithm is the identity, since the source is already additive.  If we evaluate these maps on a curve $\gamma \in C_* \G$, we arrive at the equation~\cite[V.8.5]{LazardCFGs} \[\breve D_{\G} \circ \gamma = \breve D_{\G_a \otimes \Lie G} \circ \log_{\G} \circ \gamma = \frac{d}{dt} \left( (\log_\G \circ \gamma)(t) \right).\]  Hence, $\breve D_{\G}$ plays the role of a logarithmic derivative.
 \end{enumerate}
 
-The conjecture, then, is that these pieces go much of the way towards describing a local residue pairing internal to the theory of formal groups, but there are still several details left to the enterprising reader, such as: should the de Rham complex be replaced?\footnote{Relatedly, can $\breve D_{\G}$ or $D_{\mathbb H}^{\mathbb G}$ be used to give a coordinate-free description of the deformation complex of \Cref{DeformationComplex}?}  Where do \emph{primitives} in de Rham cohomology enter play?  How do the formulas for $\sigma$ in terms of $\breve D_{\G}$~\cite[VII.6.14]{LazardCFGs} enter this story---presumably in demonstrating perfection?
-
-
-
-
-
-
-
-
-
+The conjecture, then, is that these pieces go much of the way towards describing a local residue pairing internal to the theory of formal groups, but there are still several details left to the enterprising reader, such as: should the de Rham complex be replaced?\footnote{Relatedly, can $\breve D_{\G}$ or $D_{\widehat{\mathbb H}}^{\widehat{\mathbb G}}$ be used to give a coordinate-free description of the deformation complex of \Cref{DeformationComplex}?}  Where do \emph{primitives} in de Rham cohomology enter play?  How do the formulas for $\sigma$ in terms of $\breve D_{\G}$~\cite[VII.6.14]{LazardCFGs} enter this story---presumably in demonstrating perfection?
 
 -----
 
@@ -138,147 +221,39 @@ Bousfield's work on the $K$--theory of infinite loopspaces \cite{BousfieldLambda
 
 Ask Mike (and Jacob?) if there are analogues of these results for $kO$ which explain Mahowald's generalized $K$--theoretic Brown--Gitler spectra.  3/29: I did ask Mike, he said he didn't know. I also asked Paul, and he said this seemed unreasonable, since $kO$ isn't valued in co/commutative Hopf algebras.  This is a fair point: one would need to invent an ``analogue'' of Dieudonn\'e theory for $kO$, in the sense that some category it takes values in would have to be identified as abelian, where the category is rigid enough that it often sends fiber sequences to exact sequences in the category.
 
+
+
+
+\subsection*{Structured ring spectra}
+
 Constructing sheaves of spectra on $\moduli{fg}$: the no-go results for $E_\infty$ and $A_\infty$ rings on the flat site.  There's a little MO discussion about it here: \texttt{http://chat.stackexchange.com/transcript/message/35361282\#35361282}.
 
-Difficulty in computing $\S_d \actson E_d^*$. (Gross--Hopkins and the period map.)
+$\TAF$ and friends\label{TAFDiscussion}
 
-Barry's $p$--adic measures
+The $\alpha_{1/1}$ argument: Prop 2.3.2 of Hovey's $v_n$--elements of ring spectra
 
-Fixed point spectra and e.g. $L_{K(2)} \tmf$.
+\begin{remark}
+The presence of such interesting arithmetic invariants (Bernoulli numbers, Bernoulli polynomials, generalized Eisenstein series, \ldots) hiding in the Miller invariant and its analogues is very striking.  One wonders what the analogous values are (or perhaps the values stemming from the iterated $S^1$--transfer of Baker et al~\cite{BCGHRW}) associated to a Morava $E_\Gamma$.
+\end{remark}
 
-Blueshift, A--M--S, and the relationship to A--F--G?
+\begin{remark}
+Some more open questions about this which emphasize the connection to number theory can be found at the end of one of Hopkins's Talbot talks~\cite{HopkinsTheStringOrientation}.
+\end{remark}
+
+\begin{remark}
+These Bernoulli sequences are \emph{not} the only sequences satisfying these reconstruction properties---in fact, there are infinitely many, and an explicit presentation of them is available~\cite{SprangNaumann}.  Sprang leaves open whether there is a way to single out the Bernoulli solution among the rest, and it seems plausible that this is the only solution with a ``reasonable'' growth rate (as measured in $\R$).  It would also be great if this ``real place'' condition had something to do with a smooth cohomology theory like differential real $K$--theory.
+\end{remark}
 
 Does $E_n$ receive an $E_\infty$ orientation?  Does $BP$?  (Johnson--Noel says $BP$ usually does not.  A recent preprint of Lawson says $BP$ is not even $E_\infty$ at $p = 2$!!!)
 
-$p$--divisible groups and transchromatic phenomena.  The ultrachromatic program and the introduction of equicharacteristic homotopy theory.
-
-Remark 12.13 of published $H_\infty$ AHS says their obstruction framework agrees with the $E_\infty$ obstruction framework (if you take everything in sight to have $E_\infty$ structures).  This is almost certainly related to the discussion at the end of Matt's thesis about the $MU$--orientation of $E_d$.
-
-Section 12.4 compares doing $H_\infty$ descent with doing $E_\infty$ descent and shows that they're the same (in the case of interest?).
-
-Hovey's paper on $v_n$--periodic elements in ring spectra.  He has a nice (and thorough!) exposition on why one should be interested in bordism spectra and their splittings: for instance, a careful analysis of $M\Spin$ will inexorably lead one toward studying $KO$.  It would be nice if studying $M\String$ (and potentially higher analogues) would lead one toward non-completed, non-connective versions of $EO_n$.  Talk about $BoP$, for instance.
-
 Matt's short resolutions of chromatically localized $MU$.
 
-Nilpotency and vanishing curves in the ($MU$--)Adams spectral sequence.  The \emph{non}-nilpotency of $\eta$ in the $MU$--Adams spectral sequence.  Mathew--Meier type theorems about horizontal vanishing lines and the Tate construction (and related results about the $\TMF$ spectral sequence and the Johnson--Wilson theories).
-
-Additive degeneration and $kO \ne kU^{hC_2}$.
-
-Hopkins's program for $p$--adic interpolation and Salchian $L$--functions.
-
-Hopkins's analytic Weierstrass products in the Bockstein spectral sequence: \[v_2^{(n)} = v_2^{p^n} \prod_{j=0}^{n-2} \left(1 - \left( \frac{v_1^{p+1}}{v_2} \right)^{p^{n-1} - p^j} \right) \pmod{v_1^{p^n + p^{n-1}}}.\]  In general, Mike has formulas like these for the $0$--line and for the elements $v_{n+1} h_n$ on the $1$--line.
-
-\begin{remark}[Yanovski--Schlank]
-Set $S_{\mathrm{small}}$ to be the category generated under finite colimits (including actions by finite groups, say) by $\pi$--finite spaces.  A \textit{generalized homotopy cardinality function} is a function $\chi\co \CatOf S_{\mathrm{small}} \to \Q$ satisfying
-\begin{enumerate}
-    \item Homotopy invariance: if $A \simeq B$, then $\chi(A) = \chi(B)$.
-    \item Normalization: $\chi(*) = 1$.
-    \item Additivity: $\chi(A \cup_C B) = \chi(A) + \chi(B) - \chi(C)$.
-    \item Multiplicativity: $\chi(A \times B) = \chi(A) \cdot \chi(B)$.
-\end{enumerate}
-For example, $\chi_{n,p}(X) = \dim K^0(X) - \dim K^1(X)$.  In the case $n = 0$ or $n = \infty$, this recovers the Euler characteristic, and in the intermediate cases we have computations like $\chi_{n,p}(\OS{H\Z/p}{m}) = p^{\binom{n}{m}}$.  One can show that the function $n \mapsto \chi_{n, p}(X)$ extends uniquely to a dyadic analytic function $\widehat L_{X,p}\co \Z^\wedge_2 \to \Z^\wedge_2$.
-
-We also have the Baez--Dolan function \[|X| = \sum_{x_0 \in \pi_0 X} \prod_{n=1}^\infty |\pi_n (X, x_0)|^{(-1)^n} \in \Q_{\ge 0},\] and you can convince yourself of things like $|B\Z/p| = 1/p$ and $|M_g| = 2 - 2g$.  This is not a global homotopy cardinality function, since $BC_p \sm BC_q = *$.  However, restricted to $p$--local objects in $\CatOf S_{small}$, it appears as $\widehat L_{X,p}(-1)$.  For instance, this recovers \[\widehat L_{\OS{H\Z/p}{m}, p}(-1) = p^{\binom{-1}{m}} = p^{(-1)^m} = |\OS{H\Z/p}{m}|.\]
-\end{remark}
-
-Agnes and everyone else on the chromatic splitting conjecture.
-
-
-
-
-
-
-\begin{remark}
-It is completely unclear why $MU$ plays such an important mediating role between geometry (i.e., the stable category) and algebra (i.e., sheaves on the moduli of formal groups).  Given a general ring spectrum $R$ and thick prime $\otimes$--ideals $\CatOf C_\alpha$ of perfect $R$--modules, one ask the analogous two questions:
-\begin{enumerate}
-\item Is it possible to find an $R$--algebra $S$ whose context functor induces a homeomorphism of Balmer spectra $\Spec(\CatOf{Modules}_R^{\perf}) \to \Spec(\CatOf{QCoh}(\context{S/R}))$?
-\item Are there complementary localizers $L_\alpha\co \CatOf{Modules}_R \to \CatOf{Modules}_{R,(\alpha)}$?  Can they be presented via Bousfield's framework as homological localizations for auxiliary $S$--algebra spectra $S_\alpha$?  Do the contexts $\context{S_\alpha}$ admit compatible localizers with $\context{S}$?
-\end{enumerate}
-For $R = \S$, this is the role that the $R$--algebra $S = MU$ and the $S$--algebras $S_d = E(d)$ play.  Finding these spectra feels like striking gold, and it is unclear how to produce analogous spectra in general.
-
-Mathews's work on Galois descent shows that the fixed point map $\CatOf{Modules}_{E_\Gamma, \Aut \Gamma}^{\mathrm{complete}} \to \CatOf{Spectra}_{\Gamma}$ is an equivalence of categories.
-\end{remark}
-\noindent One can ask the same question from the geometric direction: why bordism?  Why should these spectra have these nice flatness properties?  Why should they have recognizable computational properties?  Why bordism?
-
-
-
-
-\begin{remark}
-The homotopy of $\widehat L_2 \S$ is also known, by work of Shimomura and collaborators~\cite{Shimomura,ShimomuraYabeM20,ShimomuraYabeL2S} (but see also the reorganization by Behrens~\cite{BehrensRevisited}).  It is \emph{exceedingly} complicated, and it is an open problem to find an expression of it which admits human digestion.  Behrens has pursued a program encoding this problem in terms of modular forms~\cite{BehrensCongruences,BehrensModularDescription,BehrensBuildings}, and Hopkins has proposed a program involving $L$--functions~\cite{StricklandpAdicInterpolation}, motivated by which Hovey and Strickland have shown a kind of continuity result for among the groups~\cite[Section 14]{HoveyStrickland}.
-\end{remark}
-
-
-
-
-
-\begin{remark}
-There are also ``finitary'' flavors of chromatic localization available, which are typically less robust but more computable.  They assemble into a diagram:
-\begin{center}
-\begin{tikzcd}
-E \arrow{r} \arrow{d} & L_d^{\fin} E \arrow{r} \arrow{d} & L_d E \arrow{d} \\
-L_{X(d)} E \arrow{r} & \widehat L_d^{\fin} E \arrow{r} & \widehat L_d E,
-\end{tikzcd}
-\end{center}
-where $X(d)$ is a finite complex of type exactly $d$, $v$ is a $v_d$--self-map of $X(d)$, $T(d) = X(d)[v^{-1}]$ is the localizing telescope, $\widehat L_d^{\fin}$ is Bousfield localization with respect to $T(d)$ (which can be shown to be independent of choice of $X(d)$ and of $v$), and $L_d^{\fin}$ denotes localization with respect to the class of \emph{finite} $E(d)$--acyclics.  Much is known about these functors: for instance, $L_{X(d)} L_d = \widehat L_d$, there is a chromatic fracture square relating $L_d^{\fin}$ to $\widehat L_{\le d}^{\fin}$, and $L_d^{\fin} E \simeq L_d E$ if and only if $\widehat L_{\le d}^{\fin} E \simeq \widehat L_{\le d} E$.  One major question about these functors remains open, corresponding the last unsettled nilpotence and periodicity conjecture of Ravenel~\cite[Conjecture 10.5]{RavenelLocalizationWRTPeriodic}: is the map $\widehat L_d^{\fin} E \to \widehat L_d E$ an equivalence?  Multiple proofs and disproofs have been offered, but the literature remains unsettled.
-\citeme{Find some proofs and disproofs.}
-\end{remark}
-
-
-
-
-
-
-
-\begin{remark}
-Writing $M_d$ for the fiber in the sequence $M_d \to L_d \to L_{d-1}$, the filtration spectral sequence associated to the tower in \Cref{ChromaticConvergence} is called the \textit{geometric chromatic spectral sequence}, which has the form $\pi_* M_* \S \Rightarrow \pi_* \S_{(p)}$.  The two forms of filtration data $M_d X$ and $\widehat L_d X$ are actually functorially equivalent to one another:
-\begin{align*}
-\widehat L_d M_d & \simeq \widehat L_d, &
-M_d \widehat L_d & \simeq M_d,
-\end{align*}
-but they have fairly distinct properties.  For instance, $M_d$ is smashing whereas $\widehat L_d$ is not, $M_d$ is not part of an adjoint pair whereas $\widehat L_d$ is, and the analogue of \Cref{FormulaForKnLocalization} for $M_d$ is ``backwards'':\citeme{I forget who this is due to} \[M_d X \simeq \colim_I \left( M^0(v^I) \sm L_d X \right).\]  The spectrum $M_d X$ also relates to the chromatic fracture square for $X$:
-\begin{center}
-\begin{tikzcd}
-M_d X \arrow{d} \arrow[equal]{r} & M_d X \arrow{d} \\
-L_d X \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \widehat L_d X \arrow{d} \\
-L_{d-1} X \arrow{r} & L_{d-1} \widehat L_d X.
-\end{tikzcd}
-\end{center}
-From this, we see that there is a fiber sequence $M_d X \to \widehat L_d X \to L_{d-1} \widehat L_d X$.
-
-The case $d = 1$ gives the prototypical example of the difference between these two presentations of the ``exact height $d$ data'', where the sequence becomes: \[\colim_j (M^0(p^j) \sm L_1 X) \to \lim_j (M_0(p^j) \sm L_1 X) \to \left( \lim_j (M_0(p^j) \sm L_1 X) \right)_{\Q}.\]  If, for instance, $\pi_0 L_1 X = \Z_{(p)}$, then the long exact sequence of homotopy groups associated to this fiber sequence gives
-\begin{center}
-\begin{tikzcd}
-\pi_0 \widehat L_1 X \arrow{r} \arrow[equal]{d} & \pi_0 L_0 \widehat L_1 X \arrow{r} \arrow[equal]{d} & \pi_{-1} M_1 X \arrow[equal]{d} \\
-\Z^\wedge_p \arrow{r} & \Q_p \arrow{r} & \Z/p^\infty.
-\end{tikzcd}
-\end{center}
-Coupling this to \Cref{piLK1SExample}, we compute
-\begin{align*}
-\pi_t M_1 \S^0 & = \begin{cases} \Z/p^\infty & \text{when $t = -1$}, \\ \Z_p / (pk) & \text{when $t = k|v_1| - 1$ and $t = \ne 0$}, \\ \Z/p^\infty & \text{when $t = (0 \cdot |v_1| - 1) - 1 = -2$}, \\ 0 & \text{otherwise}. \end{cases}
-\end{align*}
-This is a model for what happens generally when passing from $\pi_* \widehat L_d X$ to $\pi_* M_d X$: the $v_j$--torsion--free groups get converted to infinitely $v_j$--divisible groups, with some dimension shifts.\footnote{A height $2$ example of this same phenomenon is visible in Behrens's paper~\cite[Section 7]{BehrensRevisited}.}
-\end{remark}
-
-
+Jacob wrote me an email giving a very slightly fuller sketch of what the DAG perspective on the $\sigma$--orientation is.  Interestingly, it boils down to a fact from projective geometry: there just aren't that many line bundles on projective varieties.  This forces a couple of things to become equal, and in a suitable setting they even become canonically equal.  The email has no subject line, which will make it hard to find, but you should include a summary of it (which is dependent on whatever's written in the \textit{Survey} paper) all the same.
 
 
 \begin{theorem}[Unpublished work of Hopkins and Lurie]
 Let $F_d$ denote the discrepancy spectrum for $E_d$.  There is a natural equivalence of infinite loopspaces $\Loops^\infty F_d \simeq \Susp^d \mathbb I_{\Q/\Z}$. \qed
 \end{theorem}
-
-
-
-
-free $E_\infty$--orientations off of $MU$
-
-
-
-At the top fo page 10 Neil talks in FPFP very briefly about Greenlees--May and local homology.
-
-
-
-
-
 
 Comparison of comodules $M$ for the isogenies pile with the action of $M_n(\Z_p)$ on $M \otimes_{E_n^*} D_\infty$ (this is a modern result due to Tomer, Tobi, Lukas, and Nat).  This is basically Nat's rational claim: start with a sheaf on the isogenies pile.  Tensor everything with $\Q$.  That turns this thing into a rational algebra under the Drinfel'd ring together with an equivariant action of $\GL_n \Q_p$.
 
@@ -286,37 +261,24 @@ Comparison of comodules $M$ for the isogenies pile with the action of $M_n(\Z_p)
 
 
 
-Leave a remark in here about this: McClure in BMMS works along similar lines to show that the Quillen idempotent is not $H_\infty$, but he doesn't get any positive results (and, in particular, he can't complete his analysis as we do because he doesn't have access to the $BP$--homology of finite groups and to HKR character theory).  One wonders whether the stuff here does say something about $BP$ as the height tends toward $\infty$.  So far as I know, no one has written much about this.  Surely it remains a bee in Matt's bonnet.
 
 
 
+\subsection*{Equivariance}
+
+This is tied up with the theory of power operations in a way I've never really thought about.  Seems complicated.
+
+You should also mention the ``rigidity'' of the elliptic genus, which is about an $S^1$--equivariant version.
+
+Additive degeneration and $kO \ne kU^{hC_2}$.
+
+\subsection*{Index theorems}
+
+Connections with analysis
+
+The Stolz--Teichner program
 
 
-
-
-Sections 5.3-4 of Hopkins's ICM address \textit{Algebraic Topology and Modular Forms} has a discussion of what $\eta$ and $\nu$ have to do with $\tmf$, as well as the construction of some interesting ``topological $\theta$--series'' in the elliptic cohomology of certain Thom complexes.
-
-
-
-Jacob wrote me an email giving a very slightly fuller sketch of what the DAG perspective on the $\sigma$--orientation is.  Interestingly, it boils down to a fact from projective geometry: there just aren't that many line bundles on projective varieties.  This forces a couple of things to become equal, and in a suitable setting they even become canonically equal.  The email has no subject line, which will make it hard to find, but you should include a summary of it (which is dependent on whatever's written in the \textit{Survey} paper) all the same.
-
-
-
-
-Mike's 1995 announcement is a nice read.  The end of section 3, with $\tau \mapsto 1/\tau$, is mysterious.
-
-Akhil Mathew has notes from an algebraic geometry class ( https://math.berkeley.edu/{\textasciitilde}amathew/232b.pdf ) where lectures 3--5 address the theorem of the cube.
-
-+ Warning: noncontinuous maps of high-dimensional formal affine spaces.
-+ Description of the Lubin--Tate tower and the local Langlands correspondence
-+ Uniqueness of $\O_K$-module structure in characteristic zero
-
-\begin{enumerate}
-\item Matt's calculation of $E_\infty$--orientations of $K(1)$--local spectra using the short free resolution of $MU$ in the $K(1)$--local category
-\item Sinkinson's calculation and $M\BP\<m\>$--orientations
-\end{enumerate}
-
-Akhil wrote a couple of blog posts about Ochanine's theorem: \texttt{https://amathew.wordpress.com/2012/05/30/ochanines-theorem-on-elliptic-genera/} and \texttt{https://amathew.wordpress.com/2012/05/31/the-other-direction-of-ochaines-theorem/}. Mentioning a more precise result might lend to a more beefy introduction.
 
 
 
