--- a/main.tex
+++ b/main.tex
@@ -58,6 +58,8 @@
 \todo[inline]{Get rid of the Appendix heading over the Bibliography.}
 \todo[inline]{It's deliberate that the footnotes are not fully justified?}
 \todo[inline]{Period after Theorem with citation, but not after Theorem without?}
+\todo[inline]{Use title case in chapter titles, possible also in section titles.}
+\todo[inline]{Use mathrm for differential d, exponential e, imaginary i.}
 
 
 
